# RUM-anima-x

./: .gitignore  README.md  agent.md  anima_rum_xpred.py  pyproject.toml  requirements.txt
comfyui_rum_anima_xpred/: README.md  __init__.py
configs/: anima_vpred_reflow.example.toml  anima_xpred.example.toml  toy_smoke.example.toml
data/prompts/: sample_prompts.txt
docs/: anima-rum-xpred.md  project-layout.md  runbook.md
scripts/: README.md
scripts/dev/: anima_rum_xpred_train.py  import_anima_jlt_cache.py  import_chunked_cache.py  repack_modelscope_tag_chunks.py  upload_completed_cache_chunks.py
src/rum_xpred/: __init__.py  anima.py  cache_batches.py  cache_import.py  chunking.py  config.py  train_schedule.py  vendor_paths.py
src/rum_xpred/adapters/: __init__.py  anima_sd_scripts.py
tests/: README.md  test_anima_rum_xpred.py  test_cache_import.py  test_chunked_rum.py  test_config.py  test_repack_modelscope_tag_chunks.py  test_tracker_metrics.py  test_train_schedule.py  test_upload_completed_cache_chunks.py  test_wandb_metrics.py
